# org.gnupg.libgcrypt-libgcrypt

./: CMakeLists.txt
libgcrypt/: CMakeLists.txt
libgcrypt/installer/: libgcrypt.xml
